--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,28 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "bootstrap": "cdk bootstrap",
     "build": "nest build",
+    "deploy": "cdk deploy --require-approval never",
+    "destroy": "cdk destroy -f",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "synth": "cdk synth",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@types/jest": "^29.5.12",
+    "aws-cdk-lib": "2.139.0",
+    "config": "^3.3.11",
+    "constructs": "^10.0.5",
+    "source-map-support": "^0.5.21",
+    "web-vitals": "^2.1.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
