--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "bootstrap": "cdk bootstrap",
-    "build": "nest build",
+    "build": "nest build --webpack",
     "deploy": "cdk deploy --require-approval never",
     "destroy": "cdk destroy -f",
     "format": "prettier --write \"src/**/*.ts\"",
