--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "target": "ES2020",
+      "target": "ES2021",
       "module": "commonjs",
       "lib": ["dom", "dom.iterable", "es2020", "esnext"],
       "allowJs": true,
@@ -26,7 +26,14 @@
       "resolveJsonModule": true,
       "isolatedModules": true,
       "noEmit": true,
-      "jsx": "react-jsx"
+      "jsx": "react-jsx",
+      "declaration": true,
+      "removeComments": true,
+      "emitDecoratorMetadata": true,
+      "outDir": "./dist",
+      "baseUrl": "./",
+      "incremental": true,
+      "strictBindCallApply": true
     },
     "include": ["src"],
     "exclude": ["node_modules", "cdk.out"]
