--- a/backend/package.json
+++ b/backend/package.json
@@ -22,49 +22,49 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@types/jest": "^29.5.12",
-    "aws-cdk-lib": "2.139.0",
-    "config": "^3.3.11",
-    "constructs": "^10.0.5",
-    "source-map-support": "^0.5.21",
-    "web-vitals": "^2.1.4",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/jest": "^29.5.12",
+    "aws-cdk-lib": "^2.181.1",
+    "config": "^3.3.11",
+    "constructs": "^10.0.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "source-map-support": "^0.5.21",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@vitest/coverage-c8": "^0.33.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
-    "ts-loader": "^9.4.3",
-    "tsconfig-paths": "^4.2.0",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0",
     "@types/config": "^3.3.4",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
+    "@vitest/coverage-c8": "^0.33.0",
     "aws-cdk": "2.139.0",
-    "aws-cdk-lib": "2.139.0",
+    "aws-cdk-lib": "^2.181.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "globals": "^15.0.0",
     "jest": "^29.7.0",
+    "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
     "ts-jest": "^29.1.2",
+    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4.5",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.33.0"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "2.139.0",
+    "aws-cdk-lib": "^2.181.1",
     "constructs": "^10.0.5"
   }
 }
