--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,15 @@
 root = true
+
 [*]
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-
-[*.{js,vue,css}]
 charset = utf-8
+
+[*.{js,jsx,ts,tsx,vue,json}]
 indent_style = space
 indent_size = 2
-continuation_indent_size = 6
+max_line_length = 100
+
+[*.md]
+trim_trailing_whitespace = false
