--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "test:ci": "vitest run --coverage --silent",
     "test:coverage": "vitest --coverage",
     "test:e2e": "cypress run",
-    "lint": "eslint . --ext ts,tsx --max-warnings 0",
+    "lint": "eslint .",
     "android": "npx cap sync android && npx cap open android",
     "prepare": "husky"
   },
