--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:cdk": "jest",
     "cdk": "cdk",
     "cdk:deploy": "cdk deploy",
     "cdk:destroy": "cdk destroy",
@@ -30,7 +31,6 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@types/jest": "^29.5.12",
     "aws-cdk-lib": "^2.181.1",
     "config": "^3.3.11",
     "constructs": "^10.0.5",
@@ -40,12 +40,13 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@aws-cdk/assert": "^2.68.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/config": "^3.3.4",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
