--- a/backend/package.json
+++ b/backend/package.json
@@ -22,12 +22,16 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.758.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@types/jest": "^29.5.12",
     "aws-cdk-lib": "^2.181.1",
+    "axios": "^1.8.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "config": "^3.3.11",
     "constructs": "^10.0.5",
     "reflect-metadata": "^0.1.13",
