--- a/backend/package.json
+++ b/backend/package.json
@@ -6,25 +6,24 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "bootstrap": "npx cdk bootstrap",
-    "build": "nest build --webpack",
-    "deploy": "npx cdk deploy --require-approval never",
-    "destroy": "cdk destroy -f",
+    "bootstrap": "dotenv -- npx cdk bootstrap",
+    "deploy": "dotenv -- npx cdk deploy --require-approval never",
+    "destroy": "dotenv -- cdk destroy -f",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "synth": "cdk synth",
+    "synth": "dotenv -- cdk synth",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:cdk": "jest",
-    "cdk": "cdk",
-    "cdk:deploy": "npx cdk deploy",
-    "cdk:destroy": "npx cdk destroy",
-    "cdk:synth": "npx cdk synth"
+    "cdk": "dotenv -- cdk",
+    "cdk:deploy": "dotenv -- npx cdk deploy",
+    "cdk:destroy": "dotenv -- npx cdk destroy",
+    "cdk:synth": "dotenv -- npx cdk synth"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -52,7 +51,8 @@
     "@typescript-eslint/parser": "^7.9.0",
     "@vitest/coverage-c8": "^0.33.0",
     "aws-cdk": "2.139.0",
-    "aws-cdk-lib": "^2.181.1",
+    "aws-cdk-lib": "2.139.0",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
