feat: Enhance home page with medical reports UI and navigation
- Add comprehensive home page with dynamic report listing
- Implement report item component with category-based icons
- Create no-reports placeholder with upload and connect actions
- Update tab navigation with new design and icons
- Add date-fns for date formatting
- Introduce new models and services for medical reports
- Enhance internationalization support for home page
- Style improvements with SCSS and theme overrides

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "dev": "docker compose up --build",
     "down": "docker compose down",
     "clean": "docker compose down -v --remove-orphans"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
-} 
+}
