--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "dotenv -- npx cdk bootstrap",
     "deploy": "dotenv -- npx cdk deploy --require-approval never",
     "destroy": "dotenv -- cdk destroy -f",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
