--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "axios": "1.7.9",
     "classnames": "2.5.1",
     "dayjs": "1.11.13",
+    "date-fns": "^4.1.0",
     "formik": "2.4.6",
     "i18next": "24.2.1",
     "i18next-browser-languagedetector": "8.0.2",
