--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,5 +1,8 @@
 FROM node:20-slim as builder
 
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
 WORKDIR /usr/src/app
 
 COPY package*.json ./
@@ -9,6 +12,9 @@ COPY . .
 RUN npm run build
 
 FROM node:20-slim
+
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /usr/src/app
 
