ADE-91 Implement AWS Cognito JWT authentication
- Add JWT strategy for validating Cognito tokens
- Create authentication module and service
- Implement JWT auth guard for protecting routes
- Add user extraction from token payload
- Configure proper error handling for authentication failures
- Set up environment variable integration for Cognito config

This implementation allows the backend to validate JWT tokens issued by AWS Cognito,
extract user information, and protect routes that require authentication.

--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "aws-jwt-verify": "^4.0.0"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.68.0",
