--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.758.0",
+    "@aws-sdk/client-dynamodb": "^3.529.1",
+    "@aws-sdk/lib-dynamodb": "^3.529.1",
+    "@aws-sdk/util-dynamodb": "^3.529.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
