--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "test:e2e": "cypress run",
     "lint": "eslint .",
     "android": "npx cap sync android && npx cap open android",
+    "ios": "npx cap sync ios && npx cap open ios",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -33,6 +34,7 @@
     "@capacitor/assets": "3.0.5",
     "@capacitor/core": "6.2.0",
     "@capacitor/haptics": "6.0.2",
+    "@capacitor/ios": "^6.2.0",
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
