--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,9 @@
     ]
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.0.15",
+    "@aws-amplify/core": "^6.0.15",
+    "@aws-amplify/ui-react": "^6.1.1",
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.2",
     "@capacitor/assets": "3.0.5",
