--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "test:coverage": "vitest --coverage",
     "test:e2e": "cypress run",
     "lint": "eslint .",
+    "lint:scss": "stylelint \"**/*.scss\"",
+    "lint:all": "npm run lint && npm run lint:scss",
     "android": "npx cap sync android && npx cap open android",
     "ios": "npx cap sync ios && npx cap open ios",
     "prepare": "husky"
@@ -26,6 +28,9 @@
     "*.{ts,tsx}": [
       "eslint --fix",
       "vitest related --run"
+    ],
+    "*.scss": [
+      "stylelint --fix"
     ]
   },
   "dependencies": {
@@ -95,6 +100,9 @@
     "lint-staged": "^15.4.3",
     "msw": "2.7.0",
     "sass": "1.83.1",
+    "stylelint": "^16.15.0",
+    "stylelint-config-standard-scss": "^14.0.0",
+    "stylelint-scss": "^6.11.1",
     "terser": "5.37.0",
     "typescript": "5.7.2",
     "typescript-eslint": "8.19.1",
