Update coverage handling and clean up scripts
- Added iOS coverage directory to .gitignore for better management
- Introduced clean:coverage script in package.json to automate coverage cleanup
- Updated vite.config.ts to include iOS public directory in the build process
- Removed unused social login mock from SignInForm tests for cleaner test code
- Cleaned up SignInForm component by removing SocialLoginButtons import and usage

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "test": "vitest",
     "test:ci": "vitest run --coverage --silent",
     "test:coverage": "vitest --coverage",
+    "clean:coverage": "./scripts/clean-coverage.sh",
     "test:e2e": "cypress run",
     "lint": "eslint .",
     "lint:scss": "stylelint \"**/*.scss\"",
