ADE-98 Infrastructure with ALB + Cognito

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -27,7 +27,8 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "typeRoots": [
-      "./node_modules/@types"
+      "./node_modules/@types",
+      "./src/types"
     ],
     "moduleResolution": "node",
     "resolveJsonModule": true,
