--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,12 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.68.0",
@@ -50,7 +55,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/config": "^3.3.4",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.20",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
@@ -72,7 +77,10 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "@types/cors": "^2.8.15",
+    "@types/jsonwebtoken": "^9.0.4",
+    "@types/jwk-to-pem": "^2.0.2"
   },
   "peerDependencies": {
     "aws-cdk-lib": "2.139.0",
