--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Run tests
       env:
         VITE_BASE_URL_API: https://jsonplaceholder.typicode.com
-        VITE_BUILD_COMMIT_SHA=test
+        VITE_BUILD_COMMIT_SHA: test
         VITE_BUILD_ENV_CODE: test
         VITE_BUILD_WORKFLOW_RUNNER: test
         VITE_BUILD_WORKFLOW_NAME: test
