--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -29,10 +29,15 @@ jobs:
     - name: Run tests
       env:
         VITE_BASE_URL_API: https://jsonplaceholder.typicode.com
+        VITE_BUILD_DATE: 1970-01-01
+        VITE_BUILD_TIME: 00:00:00
+        VITE_BUILD_TS: 1970-01-01T00:00:00+0000
         VITE_BUILD_COMMIT_SHA: test
         VITE_BUILD_ENV_CODE: test
         VITE_BUILD_WORKFLOW_RUNNER: test
         VITE_BUILD_WORKFLOW_NAME: test
+        VITE_BUILD_WORKFLOW_RUN_NUMBER: 1
+        VITE_BUILD_WORKFLOW_RUN_ATTEMPT: 1
       run: npm test
 
     - name: Generate test summary
