--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,8 +42,9 @@
     "@capacitor/app": "6.0.2",
     "@capacitor/assets": "3.0.5",
     "@capacitor/core": "6.2.0",
+    "@capacitor/filesystem": "6.0.2",
     "@capacitor/haptics": "6.0.2",
-    "@capacitor/ios": "^6.2.0",
+    "@capacitor/ios": "6.2.0",
     "@capacitor/keyboard": "6.0.3",
     "@capacitor/status-bar": "6.0.2",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
