--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@aws-amplify/auth": "^6.0.15",
     "@aws-amplify/core": "^6.0.15",
     "@aws-amplify/ui-react": "^6.1.1",
+    "@aws-sdk/client-bedrock-runtime": "^3.775.0",
     "@capacitor/android": "6.2.0",
     "@capacitor/app": "6.0.2",
     "@capacitor/assets": "3.0.5",
