--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.13",
     "@types/jest": "^29.5.12",
+    "aws-cdk-lib": "^2.185.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -54,8 +56,7 @@
     "rxjs": "^7.8.1",
     "source-map-support": "^0.5.21",
     "swagger-ui-express": "^5.0.0",
-    "web-vitals": "^2.1.4",
-    "aws-cdk-lib": "^2.185.0"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.68.0",
