--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:frontend": "cd frontend && npm run build"
   },
   "devDependencies": {
+    "@nestjs/testing": "^11.0.13",
+    "@types/jest": "^29.5.14",
     "husky": "^9.1.7"
   }
 }
