--- a/backend/package.json
+++ b/backend/package.json
@@ -73,7 +73,7 @@
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^3.1.1",
     "aws-cdk": "2.139.0",
     "aws-cdk-lib": "^2.185.0",
     "dotenv-cli": "^8.0.0",
@@ -90,7 +90,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0"
+    "vitest": "^3.1.1"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.185.0"
