--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/client-s3": "^3.782.0",
     "@aws-sdk/client-secrets-manager": "^3.758.0",
+    "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@aws-sdk/util-dynamodb": "^3.758.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -65,10 +67,11 @@
     "@nestjs/testing": "^10.0.0",
     "@types/config": "^3.3.4",
     "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/jwk-to-pem": "^2.0.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
