--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -41,7 +41,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "strictBindCallApply": true
+    "strictBindCallApply": true,
+    "types": ["node", "express", "multer"]
   },
   "include": [
     "src"
