--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "@aws-sdk/client-bedrock": "^3.782.0",
     "@aws-sdk/client-bedrock-runtime": "^3.782.0",
     "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/client-s3": "^3.787.0",
     "@aws-sdk/client-secrets-manager": "^3.758.0",
     "@aws-sdk/client-textract": "^3.782.0",
     "@aws-sdk/util-dynamodb": "^3.758.0",
