--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,12 +2,7 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "commonjs",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es2020",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "es2020", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -26,10 +21,7 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
-    ],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -43,11 +35,6 @@
     "incremental": true,
     "strictBindCallApply": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "cdk.out"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "cdk.out"]
 }
