Remove Cypress dependencies and references from frontend configuration

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,6 +25,6 @@
       "test/*": ["./src/test/*"]
     }
   },
-  "include": ["src", "cypress"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
