--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,11 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
+      "prettier --write",
       "vitest related --run"
+    ],
+    "*.{js,jsx,css,scss,md,json}": [
+      "prettier --write"
     ],
     "*.scss": [
       "stylelint --fix"
