--- a/backend/package.json
+++ b/backend/package.json
@@ -32,74 +32,76 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock": "^3.782.0",
-    "@aws-sdk/client-bedrock-runtime": "^3.782.0",
-    "@aws-sdk/client-dynamodb": "^3.758.0",
-    "@aws-sdk/client-s3": "^3.787.0",
-    "@aws-sdk/client-secrets-manager": "^3.758.0",
-    "@aws-sdk/client-textract": "^3.782.0",
-    "@aws-sdk/util-dynamodb": "^3.758.0",
-    "@nestjs/common": "^10.4.17",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.13",
-    "@types/jest": "^29.5.12",
+    "@aws-sdk/client-bedrock": "^3.800.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.799.0",
+    "@aws-sdk/client-dynamodb": "^3.799.0",
+    "@aws-sdk/client-s3": "^3.802.0",
+    "@aws-sdk/client-secrets-manager": "^3.799.0",
+    "@aws-sdk/client-textract": "^3.799.0",
+    "@aws-sdk/util-dynamodb": "^3.799.0",
+    "@nestjs/common": "^11.1.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/swagger": "^11.1.6",
+    "@types/jest": "^29.5.14",
     "aws-cdk-lib": "^2.189.1",
     "aws-sdk": "^2.1692.0",
-    "axios": "^1.8.1",
+    "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "config": "^3.3.11",
+    "class-validator": "^0.14.2",
+    "config": "^3.3.12",
     "constructs": "^10.4.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "helmet": "^7.0.0",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "jwk-to-pem": "^2.0.5",
+    "jwk-to-pem": "^2.0.7",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "source-map-support": "^0.5.21",
-    "swagger-ui-express": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "swagger-ui-express": "^5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.68.0",
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/config": "^3.3.4",
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
+    "@eslint/js": "^9.26.0",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.0",
+    "@types/config": "^3.3.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "^9.0.4",
-    "@types/jwk-to-pem": "^2.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/jwk-to-pem": "^2.0.3",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^8.30.1",
-    "@typescript-eslint/parser": "^8.30.1",
-    "@vitest/coverage-v8": "^3.1.1",
-    "aws-cdk": "2.139.0",
-    "aws-cdk-lib": "^2.189.1",
+    "@types/node": "^22.15.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "@vitest/coverage-v8": "^3.1.2",
+    "aws-cdk": "2.1013.0",
+    "aws-cdk-lib": "^2.194.0",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "globals": "^15.0.0",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.3.1",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
-    "ts-jest": "^29.1.2",
-    "ts-loader": "^9.4.3",
+    "ts-jest": "^29.3.2",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^3.1.1"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.31.1",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.1.2"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.189.1"
