--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,6 +87,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/eslint": "^9.6.1",
     "@types/eslint__js": "9.14.0",
     "@types/lodash": "4.17.16",
     "@types/react": "18.2.52",
