Refactor authentication service to use DirectCognitoAuthService
- Replaced CognitoAuthService with DirectCognitoAuthService in useAuthOperations and AuthProvider.
- Updated all authentication-related methods to utilize the new DirectCognitoAuthService.
- Removed CognitoAuthService and its associated tests.
- Implemented DirectCognitoAuthService to handle authentication directly using AWS SDK.
- Adjusted S3StorageService and BedrockService to fetch auth session using DirectCognitoAuthService.
- Updated OAuthRedirectHandler to use DirectCognitoAuthService for session and user retrieval.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,10 +39,8 @@
     ]
   },
   "dependencies": {
-    "@aws-amplify/auth": "^6.12.4",
-    "@aws-amplify/core": "^6.11.4",
-    "@aws-amplify/ui-react": "^6.11.1",
     "@aws-sdk/client-bedrock-runtime": "^3.799.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.799.0",
     "@aws-sdk/client-s3": "^3.802.0",
     "@aws-sdk/s3-request-presigner": "^3.802.0",
     "@capacitor/android": "^7.2.0",
