--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.799.0",
+    "@aws-sdk/client-cognito-identity": "^3.799.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.799.0",
     "@aws-sdk/client-s3": "^3.802.0",
     "@aws-sdk/s3-request-presigner": "^3.802.0",
