--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,8 +74,8 @@
     "react-dom": "19.1.0",
     "react-error-boundary": "6.0.0",
     "react-i18next": "15.5.1",
-    "react-router": "5.3.4",
-    "react-router-dom": "5.3.4",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "uuid": "^11.1.0",
     "yup": "^1.6.1"
   },
@@ -98,7 +98,7 @@
     "@typescript-eslint/parser": "^8.31.1",
     "@vitejs/plugin-legacy": "6.1.1",
     "@vitejs/plugin-react": "4.4.1",
-    "@vitest/coverage-v8": "^3.1.2",
+    "@vitest/coverage-v8": "^3.1.3",
     "eslint": "^9.26.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -107,7 +107,7 @@
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.5.1",
-    "msw": "^2.7.5",
+    "msw": "^2.7.6",
     "prettier": "^3.5.3",
     "sass": "1.87.0",
     "stylelint": "^16.19.1",
@@ -116,7 +116,7 @@
     "terser": "5.39.0",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.31.1",
-    "vite": "6.3.4",
-    "vitest": "^3.1.2"
+    "vite": "6.3.5",
+    "vitest": "^3.1.3"
   }
 }
