--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,8 +89,8 @@
     "@types/eslint": "^9.6.1",
     "@types/eslint__js": "9.14.0",
     "@types/lodash": "4.17.16",
-    "@types/react": "19.1.2",
-    "@types/react-dom": "19.1.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "@types/react-router": "5.1.20",
     "@types/react-router-dom": "5.3.3",
     "@types/uuid": "^10.0.0",
