--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["eslint"],
+    "types": ["eslint", "react", "react-dom"],
 
     /* Absolute imports */
     "paths": {
